fix: prevent webpage horizontal overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@ body {
   flex-direction: column;
   justify-content: center;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 header {
